[package]
name = "rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.17"
miller-rabin-primality-test = {path = "../miller-rabin-primality-test"}
rand = "0.8.5"
